--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   terraform_plan:
+    name: Plan
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -99,6 +100,18 @@ jobs:
         with:
           name: terraform-plan.artifacts
           path: ./
+
+      - name: List files
+        id: list-files
+        run: ls -la
+
+      - name: Terraform Show Backend
+        id: tf-show-backend
+        run: cat ./backend.tf
+
+      - name: Terraform Init
+        id: tf-init
+        run: terraform init
 
       - name: Terraform Apply
         id: tf-apply
