--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -1,8 +1,11 @@
 ---
 
-name: Terraform Apply on Pull Request
+name: Deploy against Test environment
 
-on: [pull_request, push]
+on:
+  pull_request:
+    branches:
+      - main
 
 env:
   AWS_REGION: ${{ vars.AWS_REGION }}
@@ -17,6 +20,7 @@ jobs:
   terraform_plan:
     name: Plan
     runs-on: ubuntu-latest
+    environment: test
     steps:
       - name: Checkout
         id: gh-checkout
