--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       matrix: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
     steps:
       - id: set-matrix
-        run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\"},{\"environment\":\"prod-usw1\"},{{\"environment\":\"prod-usc1\"}}]}"
+        run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"}]}"
   work_with_matrix:
     needs: create_matrix
     runs-on: ubuntu-latest
