--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
   create_matrix:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ fromJson(steps.set-matrix.outputs.matrix) }}
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
         run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"}]}"
@@ -19,7 +19,7 @@ jobs:
     needs: create_matrix
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ needs.create_matrix.outputs.matrix }}
+      matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
     env:
       release: ${{ matrix.release }}
