--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,15 +14,13 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
-        run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"}]}"
+        run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"},{\"environment\":\"prod-usc1\",\"release\":\"1.1\"}]}"
   work_with_matrix:
     needs: create_matrix
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
-    env:
-      release: ${{ matrix.release }}
     if: github.ref == 'refs/heads/releases/${{ vars.release }}'
     steps:
       - run: echo ${{ matrix.environment }}
