--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,18 +6,19 @@ on:
     tags: [ 'v*.*.*' ]
 
 jobs:
-  create_matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - id: set-matrix
-        run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"},{\"environment\":\"prod-usc1\",\"release\":\"1.1\"}]}"
+  # create_matrix:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     matrix: ${{ steps.set-matrix.outputs.matrix }}
+  #   steps:
+  #     - id: set-matrix
+  #       run: echo "::set-output name=matrix::{\"include\":[{\"environment\":\"prod-use1\",\"release\":\"1.0\"},{\"environment\":\"prod-usw1\",\"release\":\"1.0\"},{\"environment\":\"prod-usc1\",\"release\":\"1.1\"}]}"
   work_with_matrix:
-    needs: create_matrix
+    # needs: create_matrix
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
+      matrix: ${{ fromJson(vars.RELEASES) }}
+      # matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
     if: github.ref == "refs/tags/v${{ vars.release }}.*"
     steps:
