--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
-    if: github.ref == "refs/tags/v${{ vars.release }}.*"
+    if: startsWith(github.ref_name, "v${{ vars.release }}") && github.ref_type == 'tag'
     steps:
       - run: echo ENVIRONMENT ${{ matrix.environment }}
       - run: echo CIDR_BLOCK ${{ vars.TF_VAR_cidr_block }}
