--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,7 @@ jobs:
       - run: echo ENVIRONMENT ${{ matrix.environment }}
       - run: echo CIDR_BLOCK ${{ vars.TF_VAR_cidr_block }}
       - run: echo RELEASE ${{ vars.release }}
-      - run: echo REF ${{ github.ref}}
+      - run: echo REF_NAME ${{ github.ref_name}}
+      - run: echo REF_TYPE ${{ github.ref_type}}
 
 ...
