--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,5 +26,6 @@ jobs:
       - run: echo RELEASE ${{ vars.release }}
       - run: echo REF_NAME ${{ github.ref_name}}
       - run: echo REF_TYPE ${{ github.ref_type}}
+      - run: echo RELEASES ${{ vars.RELEASES }}
 
 ...
