--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,9 +3,11 @@ name: Test Matrix Output
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    branches:
+      - release/**
 
 jobs:
+
   create_matrix:
     runs-on: ubuntu-latest
     outputs:
@@ -13,13 +15,14 @@ jobs:
     steps:
       - id: set-matrix
         run: echo "::set-output name=matrix::${{ vars.RELEASES }}"
+
   work_with_matrix:
     needs: create_matrix
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
-    if: startsWith(github.ref_name, 'v${{ vars.release }}') && github.ref_type == 'tag'
+    if: startsWith(github.ref_name, vars.release) && github.ref_type == 'branch'
     steps:
       - run: echo ENVIRONMENT ${{ matrix.environment }}
       - run: echo CIDR_BLOCK ${{ vars.TF_VAR_cidr_block }}
