--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,7 @@ jobs:
           environments=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '.environments[] | .name' -)
           echo -n "{\"include\":[" > current_releases.json
           for environment in $environments; do
-            echo -n $(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments/${environment}/variables | jq '.variables[] | select(.name == "RELEASE" and .value == $ARGS.positional[0]) | {environment: $ARGS.positional[1], release: .value}' --args $ref_name $environment -) | sed 's/\({.*}\)/\1, /' >> current_releases.json
+            echo -n $(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments/${environment}/variables | jq '.variables[] | select(.name == "RELEASE" and .value == $ARGS.positional[0]) | {environment: $ARGS.positional[1], release: .value}' --args $release $environment -) | sed 's/\({.*}\)/\1, /' >> current_releases.json
           done
           sed -i'' -e 's/, $//' current_releases.json
           echo -n "]}" >> current_releases.json
