--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,10 +6,10 @@ on:
     branches:
       - releases/**
 
-permissions:
-  contents: read
-  id-token: write
-  pull-requests: write
+permissions: write-all
+  # contents: read
+  # id-token: write
+  # pull-requests: write
 
 jobs:
 
