--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ permissions:
   contents: read
   id-token: write
   pull-requests: write
-  repository-projects: write
+
 
 jobs:
 
@@ -24,22 +24,10 @@ jobs:
       release: ${{ github.ref_name }}
       GH_TOKEN: ${{ github.token }}
     steps:
-      - run: |
-          echo "REPO: ${repo}"
-          echo "RELEASE: ${release}"
       - id: set-matrix
         run: |
           set -eux
-          environments=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '.environments[] | .name' -)
-          echo -n "{\"include\":[" > current_releases.json
-          for environment in $environments; do
-            echo -n $(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments/${environment}/variables | jq '.variables[] | select(.name == "RELEASE" and .value == $ARGS.positional[0]) | {environment: $ARGS.positional[1], release: .value}' --args $release $environment -) | sed 's/\({.*}\)/\1, /' >> current_releases.json
-          done
-          sed -i'' -e 's/, $//' current_releases.json
-          echo -n "]}" >> current_releases.json
-          sed -i'' -e 's/"/\\"/g' current_releases.json
-          echo "matrix=$(cat current_releases.json)"
-      - run: cat currrent_releases.json
+          echo "matrix=$($(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]}' -))" >> $GITHUB_OUTPUT
 
 
   work_with_matrix:
