--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,7 +27,8 @@ jobs:
       - id: set-matrix
         run: |
           set -eux
-          echo "matrix=$($(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]}' -))" >> $GITHUB_OUTPUT
+          echo "matrix=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson | @sh' -)" >> $GITHUB_OUTPUT
+
 
 
   work_with_matrix:
