--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,11 +25,7 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - id: set-matrix
-        run: |
-          set -eux
-          echo "::set-output name=matrix::$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson' -)"
-
-
+        run: echo "::set-output name=matrix::$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson' -)"
 
   work_with_matrix:
     needs: create_matrix
