--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,9 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - id: set-matrix
-        run: echo "::set-output name=matrix::$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson' -)"
+        run: |
+        json=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson' -)
+        echo "::set-output name=matrix::${json}"
 
   work_with_matrix:
     needs: create_matrix
