--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          json=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq '{include: [ .environments[] | {environment: .name} ]} | tojson' -)
+          json=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)
           echo "::set-output name=matrix::${json}"
 
   work_with_matrix:
