--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,20 +26,25 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          json=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)
-          echo "::set-output name=matrix::${json}"
+          echo "matrix=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)" >> $GITHUB_OUTPUT
 
-  work_with_matrix:
+  get_release:
     needs: create_matrix
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
     environment: ${{ matrix.environment }}
-    steps:
-      - run: echo ENVIRONMENT ${{ matrix.environment }}
-      - run: echo CIDR_BLOCK ${{ vars.TF_VAR_cidr_block }}
-      - run: echo RELEASE ${{ vars.RELEASE }}
-      - run: echo REF_NAME ${{ github.ref_name}}
-      - run: echo REF_TYPE ${{ github.ref_type}}
+    outputs:
+      release: ${{ vars.release }}
+
+  run_workflow:
+    needs:
+      - create_matrix
+      - get_release
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJson(needs.create_matrix.outputs.matrix) }}
+    environment: ${{ matrix.environment }}
+    if: github.ref_name == needs.get_release.outputs.release
 
 ...
