--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,9 +24,8 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          matrix=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)
-          #echo "matrix=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)" >> $GITHUB_OUTPUT
-          echo "matrix=$matrix" >> $GITHUB_OUTPUT
+          set -eux
+          echo "matrix=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/${repo}/environments | jq -r '{include: [ .environments[] | {environment: .name} ]} | tojson' -)" >> $GITHUB_OUTPUT
 
   environment_exclude:
     needs: environment_matrix
@@ -44,11 +43,9 @@ jobs:
       - id: exclude-matrix
         if: github.ref_name != vars.release
         run: |
-          matrix=$(echo "${{ matrix.environment }}" | jq -Rr '{exclude: [ {environment: .}]} | tojson' -)
-          echo "matrix=$matrix" >> $GITHUB_OUTPUT
-          #echo "matrix=$(echo "${{ matrix.environment }}" | jq -Rr '{exclude: [ {environment: .}]} | tojson' -)" >> $GITHUB_OUTPUT
-          #echo "EXCLUDE: ${{ matrix.environment }}"
-        
+          set -eux
+          echo "matrix=$(echo "${{ matrix.environment }}" | jq -Rr '{exclude: [ {environment: .}]} | tojson' -)" >> $GITHUB_OUTPUT
+
 
   # run_workflow:
   #   needs:
