--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,7 +49,7 @@ jobs:
       - environment_exclude
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.environment_exclude.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.environment_matrix.outputs.matrix) }} ${{fromJson(needs.environment_exclude.outputs.matrix) }}
     environment: ${{ matrix.environment }}
     steps:
       - name: Run Workflow
