--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,17 +36,13 @@ jobs:
     environment: ${{ matrix.environment }}
     steps:
       - id: exclude-matrix
-        if: github.ref_name != vars.release
-        run: |
-          set -eux
-          echo "matrix=$(echo "${{ matrix.environment }}" | jq -Rr '[ {environment: .}] | tojson' -)" >> $GITHUB_OUTPUT
-      - id: out
         uses: cloudposse/github-action-matrix-outputs-write@v1
+        if: github.ref_name != vars.release
         with:
           matrix-step-name: ${{ github.job }}
-          matrix-key: ${{ matrix.environment }}
+          matrix-key: environment
           outputs: |-
-            exclude: ${{ steps.build.exclude-matrix.matrix }}
+            exclude: ${{ matrix.environment }}
 
   filtered_matrix:
     needs: matrix_exclude
