--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,9 +40,9 @@ jobs:
         if: github.ref_name != vars.release
         with:
           matrix-step-name: exclude-matrix
-          # matrix-key: environment
+          matrix-key: ${{ matrix.environment }}
           outputs: |-
-            exclude: ${{ matrix.environment }}
+            "exclude": ${{ matrix.environment }}
 
   filtered_matrix:
     needs: matrix_exclude
