--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,6 +62,9 @@ jobs:
       - id: download-artifact
         name: Download artifacts
         uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          pattern: "matrix.*"
       - id: list-files
         name: List files
         run: ls -la
